--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "Blog Gooruu",
   "version": "1.0.0",
   "authors": [
-    "mvaldetaro <mvaldetaro@gmail.com>"
+    "Magno Valdetaro <mvaldetaro@gmail.com>"
   ],
   "description": "Blog de tecnologia e Gadgtes parte do projeto Gooruu",
   "keywords": [
@@ -15,8 +15,19 @@
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ]
+    "app/bower_components",
+    "dist"
+  ],
+  "dependencies": {
+    "bootstrap": "~3.0.0",
+    "jquery": "~2.0.3",
+    "animate.css": "*",
+    "jquery.stellar": "~0.6.2",
+    "picturefill": "~1.2.0"
+  },
+  "devDependencies": {
+    "jquery.validation": "~1.11.1",
+    "jQuery-Mask-Plugin": "https://github.com/igorescobar/jQuery-Mask-Plugin.git#~1.3.1",
+    "chosen": "~1.1.0"
+  }
 }
